service_mesh_istio/traffic/gateway/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webapp-istio-gateway-a
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webapp-istio-gateway
  template:
    metadata:
      labels:
        app: webapp-istio-gateway
        version: A
    spec:
      containers:
        - name: webapp-istio-gateway
          image: robertocamara/webapp-kubernetes:v5.5A
          resources:
            limits:
              memory: "20Mi"
              cpu: "50m"
          ports:
            - containerPort: 80

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webapp-istio-gateway-b
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webapp-istio-gateway
  template:
    metadata:
      labels:
        app: webapp-istio-gateway
        version: B
    spec:
      containers:
        - name: webapp-istio-gateway
          image: robertocamara/webapp-kubernetes:v5.5B
          resources:
            limits:
              memory: "20Mi"
              cpu: "50m"
          ports:
            - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: webapp-istio-gateway-service
spec:
  type: LoadBalancer
  selector:
    app: webapp-istio-gateway # filtro para identificar os deployments
  ports:
  - port: 8000 # porta definida no k3s para o host loca
    targetPort: 80 # porta dos containers
    nodePort: 30001 # ao acessar a porta 8000 do host local será redirecionado para a porta 30000 do service
